30219429: Manage profile now shows recent matches played, including chess